docker compose file is ready

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Variables pour MySQL
-MYSQL_ROOT_PASSWORD=
+MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=tdl
 MYSQL_USER=root
-MYSQL_PASSWORD=
+MYSQL_PASSWORD=root
 
 # Variables pour Laravel
 APP_NAME=tdl
