--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,17 @@
 services:
-  mysql-db:
+  mysql:
     image: mysql:latest
     container_name: tdl-db
     environment:
-      MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-      MYSQL_ROOT_HOST: "%"
-      MYSQL_DATABASE: '${DB_DATABASE}'
-      MYSQL_USER: '${DB_USERNAME}'
-      MYSQL_PASSWORD: '${DB_PASSWORD}'
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
     ports:
       - 3306:3306
     volumes:
       - db_datas:/var/lib/mysql
     restart: always
     healthcheck:
-      # test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
-      # test: ["CMD-SHELL", "mysqladmin ping -h localhost -u root --password= || exit 1"]
+      test: ["CMD", "mysqladmin", "ping", "-p${MYSQL_PASSWORD}"]
       interval: 30s
       timeout: 30s
       retries: 5
@@ -29,9 +23,9 @@ services:
       dockerfile: Dockerfile
     container_name: tdl-api
     ports:
-      - 8080:8080
+      - 8081:8081
     volumes:
-      - ./tdl-api:/usr/src/app
+      - ./tdlApi:/usr/src/app
     env_file:
       - .env
     command: npm start
@@ -39,7 +33,7 @@ services:
     extra_hosts:
       - "tdl-api.local=127.0.0.1"
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8080/health || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8081/health || exit 1"]
       interval: 30s
       timeout: 30s
       retries: 5
@@ -55,18 +49,19 @@ services:
     volumes:
       - ./tdl:/var/www/html
     depends_on:
-      mysql-db:
+      mysql:
         condition: service_healthy
       tdl-api:
         condition: service_healthy
     env_file: 
       - .env
     environment:
-      - DB_HOST=db
+      - DB_HOST=mysql
       - DB_PORT=3306
       - DB_DATABASE=${MYSQL_DATABASE}
       - DB_USERNAME=${MYSQL_USER}
       - DB_PASSWORD=${MYSQL_PASSWORD}
+    command: bash -c "composer install && php artisan migrate && php artisan serve --host=0.0.0.0 --port=8000"
     restart: always
     extra_hosts:
       - "tdl.test=127.0.0.1"    
