--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,11 +37,11 @@ services:
     extra_hosts:
       - "tdl-api.local=127.0.0.1"
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8081/health || exit 1"]
-      interval: 30s
-      timeout: 30s
-      retries: 5
-      start_period: 30s
+       test: ["CMD-SHELL", "curl -f http://localhost:8081/health || exit 1"]
+       interval: 30s
+       timeout: 30s
+       retries: 5
+       start_period: 30s
 
   tdl-app:
     build:
@@ -52,9 +52,10 @@ services:
       - tdl-network
     ports:
       - 8000:8000
+      - 5174:5174
     volumes:
       - ./tdl:/var/www/html
-      - /var/www/html/node_modules
+      #- /var/www/html/node_modules
     depends_on:
       mysql:
         condition: service_healthy
@@ -69,10 +70,10 @@ services:
       - DB_DATABASE=${MYSQL_DATABASE}
       - DB_USERNAME=${MYSQL_USER}
       - DB_PASSWORD=${MYSQL_PASSWORD}
-    command: bash -c "composer install && php artisan migrate && npm run dev --host=0.0.0.0 --port=8000"
+    command: bash -c "composer install && php artisan migrate && php artisan serve --host=0.0.0.0 --port=8000"
     restart: always
     extra_hosts:
-      - "tdl.test=127.0.0.1"    
+      - "tdl-website.test=127.0.0.1"    
 
 networks:
   tdl-network:
